# smartclock

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
cmake_configs/: proj_config.cmake  proj_testing.cmake
config/: clock_config.json  clock_config_test.json
inc/: alarm_scheduler.h  clock_alarm_mgr.h  config_mgr.h  gui_mgr.h  ntp_client.h  scheduler.h  smartclock.h  sound_mgr.h  system_config.h  time_mgr.h  version.h  weather_client.h
media/: gui_mockup.epgz
media/img/: alarm_img.c  blank_img.c  clock.xcf  clock_example.xcf  cloudy_img.c  eight_img.c  ellipse_img.c  five_img.c  four_img.c  light_rain_img.c  nine_img.c  one_img.c  partly_sunny_img.c  rain_showers_img.c  seven_img.c  six_img.c  snow_img.c  sunny_img.c  three_img.c  thunder_img.c  two_img.c  windy_img.c  zero_img.c
media/img/working/: 0.xcf  1.xcf  10.xcf  11.xcf  2.xcf  3.xcf  4.xcf  5.xcf  6.xcf  7.xcf  8.xcf  9.xcf  Alarm.xcf  Clock_Img.xcf  blank.xcf  cloudy.xcf  ellipse.xcf  light_rain.xcf  mins.xcf  partly_sunny.xcf  rain.xcf  rain_showers.xcf  snow.xcf  sunny.xcf  thunderstorm.xcf  weather_img.xcf  windy.xcf
samples/: CMakeLists.txt
samples/ntp_client_sample/: CMakeLists.txt  ntp_client_sample.c
samples/sound_mgr_sample/: CMakeLists.txt  sound_mgr_sample.c
samples/weather_client_sample/: CMakeLists.txt  weather_client_sample.c
scripts/: build_coverage.sh  pull_submodules.sh
scripts/Testing/: TAG
src/: alarm_scheduler.c  config_mgr.c  gui_mgr_cmd.c  gui_mgr_lvgl.c  gui_mgr_sdl2.c  main.c  ntp_client.c  scheduler.c  smartclock.c  sound_mgr_openal.c  weather_client.c
src/pal/linux/: time_mgr_linux.c
tests/: CMakeLists.txt  readme.md
tests/alarm_scheduler_ut/: CMakeLists.txt  alarm_scheduler_ut.c  main.c
tests/config_mgr_ut/: CMakeLists.txt  config_mgr_ut.c  main.c
tests/ntp_client_ut/: CMakeLists.txt  main.c  ntp_client_ut.c
tests/scripts/docker_img/: Dockerfile
tests/smartclock_ut/: CMakeLists.txt  main.c  smartclock_ut.c
tests/sound_mgr_ut/: CMakeLists.txt  main.c  smartclock_ut.c  sound_mgr_ut.c
tests/weather_client_ut/: CMakeLists.txt  main.c  weather_client_ut.c
ux/: index.html  main.js  package-lock.json  package.json
ux/app/: clock_lib_abstract.js  ntp_abstract.js  weather_mgr.js
ux/css/: clock.css  dialog.css
ux/html/: index.html
ux/js/: clock_view.js
